--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,27 @@
       #progress { margin: 8px 0; }
       button { padding: 8px 12px; }
     </style>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
   </head>
   <body>
-    <h2>TS 视频多步骤处理（提取音频→提取视频→融合为 MP4）</h2>
-    <div class="row">
-      <input id="fileInput" type="file" accept="video/MP2T, .ts" />
-      <button id="runBtn" disabled>开始处理</button>
-    </div>
-    <div class="row">
-      <label>线程数：</label>
-      <input id="threads" type="number" min="1" max="8" value="4" />
-    </div>
-    <div id="progress"></div>
-    <div id="log"></div>
-    <div class="row">
-      <video id="preview" controls style="max-width: 100%; display: none;"></video>
-    </div>
-    <div class="row">
-      <a id="download" href="#" download="output.mp4" style="display: none;">下载输出 MP4</a>
+    <div id="app">
+      <h2>TS 视频多步骤处理（提取音频→提取视频→融合为 MP4）</h2>
+      <div class="row">
+        <input type="file" accept="video/MP2T, .ts" @change="onFileChange" />
+        <button @click="run" :disabled="!canRun">开始处理</button>
+      </div>
+      <div class="row">
+        <label>线程数：</label>
+        <input id="threads" type="number" min="1" max="8" v-model="threads" />
+      </div>
+      <div id="progress">{{ progressText }}</div>
+      <div id="log">{{ logText }}</div>
+      <div class="row">
+        <video id="preview" controls style="max-width: 100%;" v-show="showPreview" :src="previewURL"></video>
+      </div>
+      <div class="row">
+        <a id="download" :href="downloadURL" download="output.mp4" v-show="showDownload">下载输出 MP4</a>
+      </div>
     </div>
   </body>
 </html>
