--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       #progress { margin: 8px 0; }
       button { padding: 8px 12px; }
     </style>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+    <script src="/vendor/vue.global.prod.js"></script>
   </head>
   <body>
     <div id="app">
